--- a/projeto/package.json
+++ b/projeto/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "coverage": "jest coverage"
+    "coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
