Cria fake repository

--- a/testPattern/package.json
+++ b/testPattern/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "coverage": "jest coverage"
+    "coverage": "jest coverage",
+    "jest:watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
