--- a/testPattern/package.json
+++ b/testPattern/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/jest": "^29.5.11",
+    "@types/sinon": "^17.0.2",
     "jest": "^29.7.0",
     "pg-promise": "^11.5.4",
     "sinon": "^17.0.1",
