fix: Cria testes

--- a/projeto01/package.json
+++ b/projeto01/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "coverage": "jest coverage",
+    "coverage": "jest --coverage",
     "jest:watch": "jest --watch"
   },
   "keywords": [],
