--- a/projeto01/package.json
+++ b/projeto01/package.json
@@ -12,8 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/sinon": "^17.0.2",
+    "axios": "^1.6.5",
+    "express": "^4.18.2",
     "jest": "^29.7.0",
     "pg-promise": "^11.5.4",
     "sinon": "^17.0.1",
